@@ -1,7 +1,7 @@
-# Contributor: Leewings Ac <osideal@gmail.com>
+# Contributor: Leewings Ng <osideal@gmail.com>
 
 pkgname=fcitx-table-extra
-pkgver=0.3.1
+pkgver=0.3.3
 pkgrel=1
 pkgdesc="fcitx-table-extra provides extra table for Fcitx, including Boshiamy, Zhengma, and Cangjie3, Cangjie5."
 arch=('i686' 'x86_64')
@@ -11,7 +11,7 @@ provides=('fcitx-table-extra')
 depends=('fcitx>=4.2.0')
 makedepends=('cmake' 'intltool')
 source=(http://fcitx.googlecode.com/files/$pkgname-$pkgver.tar.xz)
-sha1sums=('00f7539354ecd2a75c689f1406ab9034fb702b0c')
+sha1sums=('d6c4449a28f2748684219a824e931b4506d125fc')
 
 build()
 {
