@@ -1,6 +1,6 @@
 # Contributor: Nikita Nikishin <i.nnikishi@gmail.com>
 pkgname=pdfbeads
-pkgver=1.0.8
+pkgver=1.0.9
 pkgrel=1
 pkgdesc="A small utility written in Ruby which takes scanned page images and converts them into a single PDF file"
 arch=(any)
@@ -10,7 +10,7 @@ depends=('ruby' 'imagemagick' 'ruby-rmagick>=2.13.1' 'jbig2enc-git')
 makedepends=(rubygems)
 source=(http://rubygems.org/downloads/$pkgname-$pkgver.gem)
 noextract=($pkgname-$pkgver.gem)
-md5sums=('3b23515441f0c1da183d53b8e16c4b55')
+md5sums=('bd4c1d2ecf7436ab45f882e10f8129b6')
 
 build() {
   cd $srcdir
