@@ -1,6 +1,6 @@
 # Contributor: Thomas Robinson <robinsthom@gmail.com>
 pkgname=robotframework-ride
-pkgver=0.49
+pkgver=0.50
 pkgrel=1
 pkgdesc="Lightweight and intuitive test data editor for Robot Framework"
 arch=('i686' 'x86_64')
@@ -8,7 +8,7 @@ url="https://github.com/robotframework/RIDE"
 license=('APACHE')
 depends=('robotframework' 'wxpython')
 source=("https://github.com/downloads/robotframework/RIDE/$pkgname-$pkgver.tar.gz")
-md5sums=('4aa910015c6b4fe120e65c02cfcbdda5')
+md5sums=('5ed1083b2e23504413456473e1564b8e')
 
 build() {
     cd "$srcdir/$pkgname-$pkgver"
