@@ -1,6 +1,6 @@
 # Contributor: Thomas Robinson <robinsthom@gmail.com>
 pkgname=robotframework
-pkgver=2.7.3
+pkgver=2.7.4
 pkgrel=1
 pkgdesc="A keyword-driven test automation framework"
 arch=('i686' 'x86_64')
@@ -9,7 +9,7 @@ license=('APACHE')
 depends=('python2')
 optdepends=('jython: for using robotframework with Java (must be installed before running PKGBUILD)')
 source=("http://robotframework.googlecode.com/files/$pkgname-$pkgver.tar.gz")
-md5sums=('f71131b0276dc2907f198116582626db')
+md5sums=('8429356e5f37e929c56ee1e275d6f8ef')
 
 build() {
     cd "$srcdir/$pkgname-$pkgver"
