@@ -1,16 +1,16 @@
 # Contributor: Luis Miguel García-Cuevas González <luismiguelgcg@gmail.com>
 pkgname=rtve-mediateca-dl
-pkgver=3.0
+pkgver=4.0.1
 pkgrel=1
 pkgdesc='Download a video file from the "mediateca" and "TVE A la Carta" of RTVE.'
 arch=('any')
 url="http://sgcg.es/articulos/2010/02/20/bajar-videos-de-la-mediateca-de-rtve/"
 license=('GPL3')
-depends=('coreutils' 'sh' 'wget')
+depends=('wget')
 source=("http://www.sgcg.es/software/rtve-mediateca-dl/$pkgname-$pkgver.tar.gz")
 changelog=ChangeLog
-md5sums=('b2cc9dc2be32f195aa457b8970286f6c')
-sha256sums=('ea9ef5e97cd0e4335a00db79fff36d56f1ea67950afdb82a5bb7e66aed1838f5')
+md5sums=('476f04b36714285ee34cc6420de1b5b1')
+sha256sums=('4a95b5e4690cc2f84629cc5e82fd3444d1c7bd09412c09ce469493d40acd4cbb')
 
 build() {
   cd "$srcdir/$pkgname-$pkgver"
