@@ -1,3 +1,9 @@
+2012-09-13  Luis Miguel García-Cuevas González  <luismiguelgcg@gmail.com>
+
+        * rtve-mediateca-dl 4.0.1-1:
+        Major upstream update, supporting the new web page structure as of
+        september 2012 and with a lot of new functionality.
+
 2011-05-11  Luis Miguel García-Cuevas González  <luismiguelgcg@gmail.com>
 
         * rtve-mediateca-dl 3.0-1:
